<resources>
    <string name="app_name">Final</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_name">Client Name:</string>
    <string name="contact_name">Contact Name:</string>
    <string name="address">Address:</string>
    <string name="client_matter">Client Matter #:</string>
    <string name="email_address">Email Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="prefix">Prefix:</string>
    <string name="box">Box#/Exhibit/Other:</string>
</resources>
