<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moore.afinal.ClientFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- TODO: Update blank fragment layout -->

    <!--
    <TextView
        style="@style/AppTheme.Labels"
        android:id="@+id/clientNameLbl"
        android:text="@string/client_name" />
-->
    <android.support.design.widget.TextInputLayout
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White"
        style="@style/TextAppearence.TextInputLayout.White"
        android:id="@+id/input_layout_clientName"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/clientNameET"
        android:inputType="textCapWords"
        android:hint="@string/client_name"
        android:imeOptions="actionDone"
        android:singleLine="true">
        <requestFocus/>
    </EditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White"
        style="@style/TextAppearence.TextInputLayout.White"
        android:id="@+id/input_layout_contactName"
        android:layout_below="@id/input_layout_clientName">
    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/contactNameET"
        android:hint="@string/contact_name"
        android:inputType="textCapWords"
        android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White"
        style="@style/TextAppearence.TextInputLayout.White"
        android:id="@+id/input_layout_address"
        android:layout_below="@id/input_layout_contactName">
    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/addressET"
        android:hint="@string/address"
        android:inputType="textCapWords"
        android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White"
        style="@style/TextAppearence.TextInputLayout.White"
        android:id="@+id/input_layout_clientMatterNum"
        android:layout_below="@id/input_layout_address">
    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/clientMatterNumET"
        android:hint="@string/client_matter"
        android:inputType="text"
        android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White"
        style="@style/TextAppearence.TextInputLayout.White"
        android:id="@+id/input_layout_emailAddress"
        android:layout_below="@id/input_layout_clientMatterNum">
    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/emailET"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:hintTextAppearance="@style/TextAppearence.TextInputLayout.White"
        style="@style/TextAppearence.TextInputLayout.White"
        android:id="@+id/input_layout_phoneNumber"
        android:layout_below="@id/input_layout_emailAddress">

    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/phoneNumberET"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
</ScrollView>